# RoboCrew

./: .coderrules  .gitignore  =2.6.1  AGENTS.md  README.md  generate_udev_rules.sh  left_arm.json  pyproject.toml  requirements.txt  right_arm.json  sterowanie.py  vla_tools.json  vr_teleop_with_dataset_recording.py
.github/: LICENSE  copilot-instructions.md
.github/workflows/: astro.yml  publish.yml
calibrations/: robot_arms.json
connectors/XLeRobot/: dual_mapper_config.json  sdk.py  tools.py  vr_teleop_with_dataset_recording.py  wheel_controls.py  wheel_controls_tutorial.md
documentation/: astro.config.mjs  package-lock.json  package.json
documentation/.astro/: content-assets.mjs  content-modules.mjs  content.d.ts  data-store.json  settings.json
documentation/.github/workflows/: deploy.yml
documentation/src/content/docs/: index.mdx
documentation/src/content/docs/guides/: lidar.mdx  start.md  start.mdx  test.mdx  udev-rules.md
documentation/src/content/docs/guides/examples/: audio.mdx  movement.md  movement.mdx  multiagent.mdx  vla-as-tools.mdx
documentation/src/content/docs/guides/setup/: installing-robocrew.md  installing-robocrew.mdx  raspberry-and-plug.md  raspberry-and-plug.mdx  udev-rules.md  udev-rules.mdx  wifi-settings.mdx
documentation/src/content/docs/reference/: example.md
examples/: 0_xlerobot_bare_minimum.py  1_xlerobot_advanced_movement.py  1_xlerobot_bare_minimum.py  2_xlerobot_listening_and_speaking.py  3_xlerobot_arm_manipulation.py  4_earthrover_mini_plus.py  4_xlerobot_ex3_with_lidar.py  4_xlerobot_multiagent_cooperation.py  5_xlerobot_multiagent_cooperation.py  5_xlerobot_planner.py  6_xlerobot_breezyslam_slam.py  6_xlerobot_groot_manipulation.py  7_tello_drone_agent.py  8_tello_planner_agent.py  arm_test.py  cosmos.py  gemma_test.py  keyword_reco_test.py  simple_navigation.py  test_example.py  usb_record_test.py  xlerobot_controler.py  xlerobot_controller.py
robots/XLeRobot/: tools.py  wheel_controls.py
src/: LLMAgent.py  gemini_test.py  sound_receiver.py  tools.py  utils.py
src/robocrew/: __init__.py  config.py  main.py
src/robocrew/core/: LLMAgent.py  __init__.py  agent.py  arm.py  camera.py  lerobot_patch.py  lidar.py  memory.py  memory_store.py  movement.py  navigation_agent.py  obstacle_detection.py  qr_scanner.py  robot_system.py  skills.py  slam.py  sound_receiver.py  state.py  test_memory.db  tools.py  utils.py  voice_synth.py
src/robocrew/core/tts/: .gitignore  README.md  polly.py  setup.py
src/robocrew/core/tts/polly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/robocrew/display/: __init__.py
src/robocrew/display/static/js/: display.js
src/robocrew/display/templates/: display.html
src/robocrew/navigation/: __init__.py  precision.py  tools.py
src/robocrew/robots/EarthRover/: Earth_Rover_LLM_agent.py  earth_rover.prompt  magentic_calibration.py  robot_map_tracker.py  tools.py  utils.py
src/robocrew/robots/Tello/: tello.prompt  tello_LLM_agent.py  tello_flat_inspection.prompt  tello_planner.prompt  tools.py
src/robocrew/robots/Tello/mcp/: executor_runtime.py  server.py
src/robocrew/robots/Tello/skills/flat_inspection/: SKILL.md  tools.py
src/robocrew/robots/XLeRobot/: DOC.md  groot_client.py  planner.prompt  robot_controls.py  sdk.py  sdk_old.py  servo_controls.py  tools.py  utils.py  wheel_controls.py  wheel_controls_old.py  xlerobot.prompt  xlerobot_LLM_agent.py
src/robocrew/scripts/: generate_udev_rules.sh  robocrew_find_components.py  robocrew_generate_udev_rules.py  robocrew_record_positions.py  robocrew_set_wifi_priority.py  robocrew_setup_usb_modules.py
src/robocrew/ui/: .cli.py.swp  agent_setup.py  app.py  cli.py  dashboard.py  tab_config.py  tab_conversation.py  tab_dataset.py  tab_manual.py  tab_vla.py  utils.py  vla_tools.json
src/robocrew/vision/: __init__.py  obstacle.py  qr.py
src/robocrew/web/: app.py  routes.py
src/robocrew/web/static/css/: display.css
tests/: conftest.py  test_llm_agent.py  test_memory.py  test_skills.py  test_tello_tools.py  test_tools.py  test_utils.py
tests/core/: test_agent.py
tests/display/: test_display.py
tests/navigation/: test_precision.py  test_tools.py
tests/vision/: test_obstacle.py  test_qr.py
