[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "robocrew"
version = "0.1.8b7"
authors = [
  { name="Grigorij Dudnik", email="dudnikgrv@gmail.com" },
  { name="Konrad Suchodolski", email="konrad.suchodolski50@gmail.com" },
  { name="Piotr Zarzycki", email="piotr.zarzycki@placeholder.com" },
]
description = "🦾Set up your embodied LLM agent same easiness as you set up normal agents in CrewAI or Autogen"
dependencies = [
  "langchain==1.1.0",
  "langchain-google-genai==3.2.0",
  "langchain-openai==1.1.0",
  "lerobot==0.4.3",
  "lerobot[async]==0.4.3",
  "opencv-python==4.10.0.84",
  "python-dotenv==1.2.1",
  "openai==2.8.1",
  "feetech-servo-sdk==1.0.0",
  "google-ai-generativelanguage==0.9.0",
  "grpcio==1.73.1",
  "rplidar>=0.9.2",
  "pygame>=2.6.1",
  "piper-tts>=1.4.1",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ 
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
robocrew-setup-usb-modules = "robocrew.scripts.robocrew_setup_usb_modules:main"
robocrew-set-wifi-priority = "robocrew.scripts.robocrew_set_wifi_priority:set_priority"

[project.urls]
Homepage = "https://github.com/Grigorij-Dudnik/RoboCrew"

